--- a/index.html
+++ b/index.html
@@ -6,21 +6,66 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Site desenvolvido pela Agência Solary -->
+
   <!-- Descrição do site -->
   <meta name="description" content="">
+
 
   <!-- Estilos -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <!-- Tipografia -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Título -->
   <title>Street Store SP</title>
 </head>
 
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#quem-somos">Quem somos</a></li>
+        <li><a href="#">O que fazemos</a></li>
+        <li><a href="#">Faça parte</a></li>
+        <li><a href="#">Fale com a gente</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <section class="hero ">
+      <div class="hero-logo">
+        <img src="./assets/img/logo.svg" alt="Logotipo StreetStore SP">
+      </div>
+      <div class="hero-nav">
+        <ul>
+          <li><a href="#"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="quem-somos container" id="quem-somos">
+      <div class="quem-somos-txt">
+        <h2>Quem Somos <span>Quem somos</span></h2>
+        <p>A iniciativa que começou em Janeiro de 2014, na Cidade do Cabo, na África do Sul, conseguiu em apenas um dia ajudar mais de 3.500 pessoas em situação de rua. Os precursores então transformaram a ação em um movimento.
+          <br><br>
+        <p>Mais de 20 mil pessoas já foram atendidas desde 2015.
+          Mais de 25 toneladas de doações foram distribuídas.
+          700 voluntários já atuaram no trabalho voluntário.
+          Mais de 80 parceiros do setor privado já colaboraram nas edições do projeto.</p>
+        </p>
+        <a href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
+      </div>
+      <div class="quem-somos-img"><img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos"></div>
+    </section>
+  </main>
 </body>
 
 </html>
