--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <nav>
       <ul>
         <li><a href="#quem-somos">Quem somos</a></li>
-        <li><a href="#">O que fazemos</a></li>
-        <li><a href="#">Faça parte</a></li>
+        <li><a href="#sobre">O que fazemos</a></li>
+        <li><a href="#ajude">Faça parte</a></li>
         <li><a href="#">Fale com a gente</a></li>
       </ul>
     </nav>
@@ -52,8 +52,8 @@
     </section>
 
     <section class="quem-somos container" id="quem-somos">
-      <div class="quem-somos-txt">
-        <h2>Quem Somos <span>Quem somos</span></h2>
+      <div class="sec-txt">
+        <h2>Street Store <span>Quem somos</span></h2>
         <p>A iniciativa que começou em Janeiro de 2014, na Cidade do Cabo, na África do Sul, conseguiu em apenas um dia ajudar mais de 3.500 pessoas em situação de rua. Os precursores então transformaram a ação em um movimento.
           <br><br>
         <p>Mais de 20 mil pessoas já foram atendidas desde 2015.
@@ -63,8 +63,64 @@
         </p>
         <a href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
       </div>
-      <div class="quem-somos-img"><img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos"></div>
+      <div class="sec-img"><img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos"></div>
     </section>
+
+    <section class="sobre container" id="sobre">
+      <div class="sec-img">
+        <img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos">
+      </div>
+      <div class="sec-txt">
+        <h2>Sobre nos<span>O que fazemos</span></h2>
+        <p>A iniciativa que começou em Janeiro de 2014, na Cidade do Cabo, na África do Sul, conseguiu em apenas um dia ajudar mais de 3.500 pessoas em situação de rua. Os precursores então transformaram a ação em um movimento.
+          <br><br>
+          Hoje mais de 1000 edições já foram realizadas pelo mundo. Aqui no DF, nosso principal objetivo é levar o projeto para as regiões mais carentes, auxiliando moradores da periferia e pessoas em situação de rua.
+          <br><br>
+          Hoje mais de 1000 edições já foram realizadas pelo mundo. Aqui no DF, nosso principal objetivo é levar o projeto para as regiões mais carentes, auxiliando moradores da periferia e pessoas em situação de rua.
+        </p>
+        <a href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
+      </div>
+    </section>
+
+    <section class="container numeros">
+      <div class="num-card">
+        <h4>+10</h4>
+        <h3>lojas espalhadas pelo mundo</h3>
+      </div>
+      <div class="num-card">
+        <h4>+10</h4>
+        <h3>lojas espalhadas pelo mundo</h3>
+      </div>
+      <div class="num-card">
+        <h4>+10</h4>
+        <h3>lojas espalhadas pelo mundo</h3>
+      </div>
+    </section>
+
+    <section class="ajude container" id="ajude">
+      <h2>Texto legal<span>Faça sua parte</span></h2>
+      <h3>São diversas formas que você pode ajudar</h3>
+      <ul>
+        <li>Se você é empresário(a) fornecendo algum serviço no dia do evento;</li>
+        <li>Contribuição financeira;</li>
+        <li>Sendo voluntario no projeto</li>
+        <li>Compartilhando e divulgando o projeto;</li>
+        <li>Com a doação de roupas e sapatos nos pontos de coleta</li>
+      </ul>
+      <a href="#" class="btn">Entre no grupo do Whatsapp</a>
+    </section>
+
+    <footer>
+      <img class="logo" src="./assets/img/logo.svg" alt="Logotipo StreetStore SP">
+      <div class="footer-nav">
+        <ul>
+          <li><a href="#"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
+          <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
+        </ul>
+      </div>
+    </footer>
   </main>
 </body>
 
