--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
   <main>
-    <section class="hero ">
+    <section class="hero">
       <div class="hero-logo">
         <img src="./assets/img/logo.svg" alt="Logotipo StreetStore SP">
       </div>
@@ -51,7 +51,7 @@
       </div>
     </section>
 
-    <section class="quem-somos container" id="quem-somos">
+    <section id="quem-somos" class="quem-somos container">
       <div class="sec-txt">
         <h2>Street Store <span>Quem somos</span></h2>
         <p>A iniciativa que começou em Janeiro de 2014, na Cidade do Cabo, na África do Sul, conseguiu em apenas um dia ajudar mais de 3.500 pessoas em situação de rua. Os precursores então transformaram a ação em um movimento.
@@ -66,7 +66,7 @@
       <div class="sec-img"><img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos"></div>
     </section>
 
-    <section class="sobre container" id="sobre">
+    <section id="sobre" class="sobre container">
       <div class="sec-img">
         <img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos">
       </div>
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-    <section class="container numeros">
+    <section id="numeros" class="container numeros">
       <div class="num-card">
         <h4>+10</h4>
         <h3>lojas espalhadas pelo mundo</h3>
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="ajude container" id="ajude">
+    <section id="ajude" class="ajude container">
       <h2>Texto legal<span>Faça sua parte</span></h2>
       <h3>São diversas formas que você pode ajudar</h3>
       <ul>
@@ -108,6 +108,45 @@
         <li>Com a doação de roupas e sapatos nos pontos de coleta</li>
       </ul>
       <a href="#" class="btn">Entre no grupo do Whatsapp</a>
+    </section>
+
+
+    <section id="parceiros" class="parceiros container">
+      <h4>Parceiros</h4>
+      <div class="marcas">
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+      </div>
+    </section>
+
+    <section id="patrocinadores" class="patrocinadores container">
+      <h4>Patrocinadores</h4>
+      <div class="marcas">
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+      </div>
+    </section>
+
+    <section id="apoiadores" class="apoiadores container">
+      <h4>Apoiadores</h4>
+      <div class="marcas">
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+        <div class="marca"><img src="./assets/img/logo.svg" alt="Logotipo da "></div>
+      </div>
     </section>
 
     <footer>
