--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Site desenvolvido pela Agência Solary -->
 
   <!-- Descrição do site -->
-  <meta name="description" content="">
+  <meta name="description" content="Uma loja de roupas que resgata a autoestima de moradores de rua em todo o mundo">
 
 
   <!-- Estilos -->
@@ -25,13 +25,13 @@
 </head>
 
 <body>
-  <header>
+  <header id="header">
     <nav>
       <ul>
         <li><a href="#quem-somos">Quem somos</a></li>
         <li><a href="#sobre">O que fazemos</a></li>
         <li><a href="#ajude">Faça parte</a></li>
-        <li><a href="#">Fale com a gente</a></li>
+        <li><a href="https://docs.google.com/forms/d/1tmB_iWGqwRTa3tekdmoz8ObLLFPpJK8bynw-v6ou-X4/viewform?edit_requested=true">Fale com a gente</a></li>
       </ul>
     </nav>
   </header>
@@ -43,8 +43,8 @@
       </div>
       <div class="hero-nav">
         <ul>
-          <li><a href="#"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
           <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
           <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
         </ul>
@@ -95,6 +95,18 @@
         <h4>+10</h4>
         <h3>lojas espalhadas pelo mundo</h3>
       </div>
+    </section>
+
+    <section class="galeria container">
+      <h2>Algumas fotos <span>Galeria</span></h2>
+      <ul class="galeria-fts">
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+        <li><img src="./assets/img/exemplo.png" alt=""></li>
+      </ul>
     </section>
 
     <section id="ajude" class="ajude container">
@@ -153,14 +165,16 @@
       <img class="logo" src="./assets/img/logo.svg" alt="Logotipo StreetStore SP">
       <div class="footer-nav">
         <ul>
-          <li><a href="#"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
           <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
           <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
         </ul>
       </div>
     </footer>
   </main>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
