--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
   <header id="header">
-    <div class="header-logo"><a href="#"><img src="./assets/img/logo.svg" alt="Logotipo StreetStore"></a></div>
+    <div class="header-logo"><a target="_blank" href="#"><img src="./assets/img/logo.svg" alt="Logotipo StreetStore"></a></div>
     <nav class="header-nav" data-menu="list" role="menu">
       <button id="btn-mobile" data-menu="button" aria-expanded="false" aria-controls="menu" aria-haspopup="true" aria-label="Abrir Menu">Menu
         <span id="hamburguer"></span>
@@ -35,7 +35,7 @@
         <li><a href="#quem-somos">Quem somos</a></li>
         <li><a href="#sobre">O que fazemos</a></li>
         <li><a href="#ajude">Faça parte</a></li>
-        <li><a href="https://docs.google.com/forms/d/1tmB_iWGqwRTa3tekdmoz8ObLLFPpJK8bynw-v6ou-X4/viewform?edit_requested=true">Fale com a gente</a></li>
+        <li><a target="_blank" href="https://docs.google.com/forms/d/1tmB_iWGqwRTa3tekdmoz8ObLLFPpJK8bynw-v6ou-X4/viewform?edit_requested=true">Fale com a gente</a></li>
       </ul>
     </nav>
   </header>
@@ -47,10 +47,10 @@
       </div>
       <div class="hero-nav">
         <ul>
-          <li><a href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
-          <li><a href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a target="_blank" href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
+          <li><a target="_blank" href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
         </ul>
       </div>
     </section>
@@ -65,7 +65,7 @@
           700 voluntários já atuaram no trabalho voluntário.
           Mais de 80 parceiros do setor privado já colaboraram nas edições do projeto.</p>
         </p>
-        <a href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
+        <a target="_blank" href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
       </div>
       <div class="sec-img"><img src="./assets/img/exemplo.png" alt="StreetStore - Foto de uma ação voluntária que realizamos"></div>
     </section>
@@ -82,7 +82,7 @@
           <br><br>
           Hoje mais de 1000 edições já foram realizadas pelo mundo. Aqui no DF, nosso principal objetivo é levar o projeto para as regiões mais carentes, auxiliando moradores da periferia e pessoas em situação de rua.
         </p>
-        <a href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
+        <a target="_blank" href="#" class="btn">Veja o vídeo <img src="./assets/img/play.svg" alt="Botão de play"></a>
       </div>
     </section>
 
@@ -123,7 +123,7 @@
         <li>Compartilhando e divulgando o projeto;</li>
         <li>Com a doação de roupas e sapatos nos pontos de coleta</li>
       </ul>
-      <a href="#" class="btn">Entre no grupo do Whatsapp</a>
+      <a target="_blank" href="#" class="btn">Entre no grupo do Whatsapp</a>
     </section>
 
 
@@ -169,10 +169,10 @@
       <img class="logo" src="./assets/img/logo.svg" alt="Logotipo StreetStore SP">
       <div class="footer-nav">
         <ul>
-          <li><a href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
-          <li><a href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
-          <li><a href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/sp.streetstore"><img src="./assets/img/icon-facebook.svg" alt="Ícone do Facebook"></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/streetstoresp/"><img src="./assets/img/icon-instagram.svg" alt="Ícone do Instagram"></a></li>
+          <li><a target="_blank" href="#"><img src="./assets/img/icon-twitter.svg" alt="Ícone do Twitter"></a></li>
+          <li><a target="_blank" href="#"><img src="./assets/img/icon-whatsapp.svg" alt="Ícone do Whatsapp"></a></li>
         </ul>
       </div>
     </footer>
