--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <!-- Estilos -->
   <link rel="stylesheet" href="./assets/css/style.css">
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
   <!-- Tipografia -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
